Fixes dark mode button coming too far down

--- a/src/static/css/base/_page.scss
+++ b/src/static/css/base/_page.scss
@@ -71,6 +71,11 @@
 		padding-bottom: 0px !important;
 	}
 
+	@media screen and (min-width: 1680px){
+		.LightDarkDiv{
+			margin-top: -60px;
+		}
+	}
 
 	@include breakpoint(small){
 		.LightDarkDiv{
